fixed title not being visible in nav-tabs header

--- a/themes/bootstrap/dark_purple/_variables.scss
+++ b/themes/bootstrap/dark_purple/_variables.scss
@@ -7,6 +7,8 @@ $gray-600: #6c757d;
 $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #212529;
+$jumbotron-bg: gray-600;
+$nav-tabs-link-active-color: $gray-100;
 $secondary: $gray-800;
 $primary: #45158a;
 $body-color: $gray-100;
